Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.0.M6
Date:
----------------------------------
Changes/New Features:



Bug Fixes:

CAY-2256 Cannot Save/Insert an Object With null Flattened (complex) toOne Relationship (see also CAY-2146)

----------------------------------
Release: 4.0.M5
Date: March 6, 2017
----------------------------------
Changes/New Features:

CAY-2139 Upgrade HSQLDB dependency to the most recent version (2.3.4)
CAY-2150 Refactoring: ParameterBinding to contain ExtendedType property
CAY-2163 Property.path() , ExpressionFactory.pathExp()
CAY-2164 Relocate builder bootstrap methods from ServerRuntimeBuilder to ServerRuntime
CAY-2165 Explicit "contribution" API for easier expansion of DI collections and maps
CAY-2166 Auto-loading of Cayenne modules
CAY-2168 Split DbLoader to parts and clean it up
CAY-2169 Split DbMerger to parts and clean it up
CAY-2170 MergeToken sorting is highly unstable
CAY-2172 Cleanup Modeler import and migrate db actions
CAY-2176 Java 7 diamond class generation templates
CAY-2177 Sync auto generated state of PK between model and DB
CAY-2187 Support for the scalar and aggregate SQL functions in ObjectSelect API
CAY-2197 Update sqlite version and enable in-memory default config
CAY-2212 cdbimport cleanup and configuration schema refactoring
CAY-2223 JCacheQueryCache - a query cache provider to plug in JCache implementers
CAY-2225 Extensible CacheInvalidationFilter logic
CAY-2228 Deprecate multiple cache groups in caching and query API
CAY-2231 Support for collections in new functional expressions and old math expressions
CAY-2232 Proper conversion to String for new functional expressions
CAY-2235 Deprecate Query.getDataMap() method

Bug Fixes:
