@@ -41,18 +41,48 @@ name|Font
 import|;
 end_import
 
-begin_interface
+begin_class
 specifier|public
-interface|interface
+specifier|abstract
+class|class
 name|SyntaxConstant
 block|{
+specifier|public
+specifier|static
+specifier|final
 name|Font
 name|DEFAULT_FONT
+decl_stmt|;
+static|static
+block|{
+name|String
+name|fontName
 init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"os.name"
+argument_list|)
+operator|.
+name|toLowerCase
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"win"
+argument_list|)
+condition|?
+literal|"Courier New"
+else|:
+literal|"Courier"
+decl_stmt|;
+name|DEFAULT_FONT
+operator|=
 operator|new
 name|Font
 argument_list|(
-literal|"Courier"
+name|fontName
 argument_list|,
 name|Font
 operator|.
@@ -60,7 +90,11 @@ name|PLAIN
 argument_list|,
 literal|14
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+specifier|final
 name|Color
 name|DEFAULT_COLOR
 init|=
@@ -68,52 +102,74 @@ name|Color
 operator|.
 name|black
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
 name|String
 name|COMMENT_TEXT
 init|=
 literal|"(?:/\\*(?:[^*]|(?:\\*+[^*/]))*\\*+/)|(?://.*)"
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
 name|String
 name|COMMENT_TEXT_START
 init|=
 literal|"/\\*.?"
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
 name|String
 name|STRING_TEXT
 init|=
 literal|"'[^']*'"
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
 name|String
 name|NUMBER_TEXT
 init|=
 literal|"\\d+"
 decl_stmt|;
+specifier|public
+specifier|abstract
 name|String
 index|[]
 name|getKEYWORDS
 parameter_list|()
 function_decl|;
+specifier|public
+specifier|abstract
 name|String
 index|[]
 name|getKEYWORDS2
 parameter_list|()
 function_decl|;
+specifier|public
+specifier|abstract
 name|String
 index|[]
 name|getTYPES
 parameter_list|()
 function_decl|;
+specifier|public
+specifier|abstract
 name|String
 index|[]
 name|getOPERATORS
 parameter_list|()
 function_decl|;
+specifier|public
+specifier|abstract
 name|String
 name|getContentType
 parameter_list|()
 function_decl|;
 block|}
-end_interface
+end_class
 
 end_unit
 
