@@ -17,6 +17,7 @@ Changes/New Features:
 
 Bug Fixes:
 
+CAY-2240 Modeler: issue with cursor rendering for EJBQL query
 CAY-2256 Cannot Save/Insert an Object With null Flattened (complex) toOne Relationship (see also CAY-2146)
 
 ----------------------------------
